--- a/OverwatchApi/appsettings.json
+++ b/OverwatchApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DataContext": "Server=.\\sqlexpress;Database=Overwatch;Trusted_Connection=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
